	Fixed: Ftp, Mail and SQL passwords are not decrypted during database update r53
	Fixed: Infinite loop in iMSCP_Update_Database::dropIndexByColumn()
	Fixed: Undefined key KEY_NAME in iMSCP_Update_Database::dropIndexByColumn()
	Fixed: Undefined offset in database update r169

DISTROS
	Re-added: Courier as alternative IMAP/POP3 servers (Debian Jessie)

ENGINE
	Changed: Backslashes are no longer allowed in SQL user names and  passwords
	Changed: SASL authentication is now made against database directly (Postfix)
	Fixed: In case the passphrase is missing, user must not be prompted (iMSCP::OpenSSL)
	Fixed: Missing EOL in SSL certificate containers (iMSCP::OpenSSL)
	Fixed: Quota script must ignore maildir which doesn't exist
	Fixed: Quotation marks must be escaped in some configuration file (PhpMyAdmin, Roundcube)
	Replaced: Dovecot SASL replaced by Cyrus SASL (Postfix)

GUI
	Fixed: Feature custom_dns_record is not known by the customerHasFeature() function

INSTALLER
	Added: Option allowing to force reinstallation of distro packages
	Fixed: Bind9 cannot start if the resolvconf package is not configured yet (Debian Squeeze)
	Fixed: Installer hangs while packages installation (Debian Jessie)
	Fixed: Unable to migrate from ispCP (linked to the infinite loop in iMSCP_Update_Database::dropIndexByColumn())

TICKETS
	Fixed #1095: Bug - IP usage interface is broken
	Fixed #1099: Bug - SQL users which belong to an account which is being deleted are not removed from mysql table

------------------------------------------------------------------------------------------------------------------------
1.1.11
------------------------------------------------------------------------------------------------------------------------

2014-06-08: Laurent Declercq
	RELEASE i-MSCP 1.1.11

PLUGINS
	Changed: plugin's backend scripts are now loaded from main plugin directory to avoid too many IO operations