@@ -23,6 +23,7 @@ DISTROS
 	Re-added: Courier as alternative IMAP/POP3 servers (Debian Jessie)
 
 ENGINE
+	Added: iMSCP::Net::getAddrType() method
 	Changed: Backslashes are no longer allowed in SQL user names and  passwords
 	Changed: SASL authentication is now made against database directly (Postfix)
 	Fixed: In case the passphrase is missing, user must not be prompted (iMSCP::OpenSSL)
